tdf#115315 Cursor not in focus with new document

Partial revert of 7aae8772aa18744cb1bbd8348272be99cc882c47
("Clear VclPtr instance reference on removed UserEvents.")
Disposing of child controls should not affect focus events
of the parent frame.

Change-Id: I583311050560a2851cfcc372741b675b52375d06